# orenoBiomni

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_job_celery_fields.py  003_wes_schema.py  004_add_pipelines.py  005_add_performance_indexes.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  job.py  message.py  pipeline.py  session.py  user.py
backend/app/routers/: auth.py  files.py  health.py  jobs.py  metrics.py  pipelines.py  sessions.py  system_info.py  tools.py  wes.py
backend/app/schemas/: files.py  health.py  job.py  pipeline.py  session.py  system_info.py  tools.py  wes.py
backend/app/services/: agent_manager.py  auth_service.py  execution_service.py  monkey_patch.py  pipeline_service.py  session_service.py
backend/app/streaming/: sse.py
backend/app/tasks/: db_sync.py  execute.py  pipeline_callback.py  sandbox.py
backend/tests/: conftest.py  test_health.py  test_parser.py  test_sessions.py
docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox  Dockerfile.worker  entrypoint-backend.sh  entrypoint-worker.sh  entrypoint.sh
docs/: plan.md
frontend/: next.config.ts  package-lock.json  package.json
nginx/: nginx.conf
patches/: biomni-ollama-compat.patch
scripts/: backup-db.sh  deploy.sh  dgx-spark-setup.sh  launch.sh  setup-local.sh
(+61 files in other folders)
